# automated-monthly-reports

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  test.yml
src/automated_monthly_reports.egg-info/: PKG-INFO  SOURCES.txt
src/automated_reports/: report.py  report_cli.py
tests/: conftest.py  test_report.py
