[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-monthly-reports"
version = "0.1.0"
description = "Utilities to aggregate taxi route Excel reports"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "ΧΡΥΣΟΒΑΛΑΝΤΗΣ ΠΑΣΧΑΛΙΔΗΣ"}]
license = {text = "MIT"}
dependencies = [
  "pandas",
  "openpyxl"
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["automated_monthly_reports*"]
